# home

./: .gitignore  README.md  applicationset.yaml  apply-gcp-secret.sh  install.sh
apps/openid-server/: README.md  go.mod  main.go
apps/rust-agent/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
apps/rust-agent/kubernetes/: agent-deployment.yaml
apps/rust-agent/src/: environment.rs  main.rs  redis.rs
apps/rust-agent/src/agent/: mod.rs
apps/rust-agent/src/agent/tools/: mod.rs  portfolio_api_search.rs  wrapped.rs
apps/rust-agent/src/kube/: mod.rs
apps/rust-agent/src/server/: mod.rs  types.rs
apps/sandbox-api/: go.mod  go.sum  main.go
apps/sandbox-cli/: go.mod  go.sum  main.go
ci/worker/: Dockerfile  README.md  go.mod  main.go
docs/: SECRET_MANAGEMENT.md
helm-library/application-template/: Chart.yaml
helm-library/mysql/: Chart.yaml  README.md  values-external-secrets-example.yaml  values.yaml
helm-library/redis/: Chart.yaml  README.md  values-external-secrets-example.yaml  values.yaml
helm/ai-agent-api/: Chart.yaml  values.yaml
helm/argocd/: Chart.yaml
helm/atlantis/: Chart.yaml  values.yaml
helm/cloudflare/: Chart.yaml  values.yaml
helm/external-secrets/: values.yaml
helm/hello-world/: Chart.yaml  output.yaml  values.yaml
helm/mysql/: Chart.yaml  (+4 more)
kubernetes/: argocd-application.yaml  argocd.yaml  namespace.yaml
oidc-api/: Dockerfile  go.mod  main.go
terraform/: apps.tf  backend.tfvars.example  dns.tf  gar.tf  gcs.tf  main.tf  secret-test.tf  secrets.auto.tfvars.example  secrets.tf  variables.tf  versions.tf  wif.tf
(+180 files in other folders)
