[package]
name = "rust-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
rig-core = "0.27.0"
reqwest = "0.12"
tokio = { version = "1.48.0", features = ["rt", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenv = "0.15.0"
redis = { version = "0.25", features = ["aio", "tokio-comp"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }
percent-encoding = "2.3"
